--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -61,6 +61,7 @@
         android:id="@+id/profile_LBL_mail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:maxLines="1"
         android:text="@string/user_mail"
         android:textColor="@color/white"
         android:textSize="20sp" />
