--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -22,6 +22,7 @@
         android:id="@+id/profile_IMG_picture"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:clickable="true"
         android:src="@drawable/ic_profile"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"/>
@@ -81,7 +82,7 @@
         android:id="@+id/profile_BTN_update"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Update profile"
+        android:text="@string/update_profile"
         android:backgroundTint="@color/colorPrimaryDark"
         android:layout_marginTop="10dp"/>
 
