--- a/app/src/main/res/layout/fragment_ask_items.xml
+++ b/app/src/main/res/layout/fragment_ask_items.xml
@@ -23,13 +23,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/colorPrimary"
+        app:srcCompat="@drawable/ic_add"
+        app:tint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.95"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.975"
-        app:srcCompat="@drawable/ic_add_24px" />
+        app:layout_constraintVertical_bias="0.975"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
