--- a/app/src/main/res/layout/fragment_give_items.xml
+++ b/app/src/main/res/layout/fragment_give_items.xml
@@ -29,7 +29,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.975"
-        app:srcCompat="@drawable/ic_add_24px" />
+        app:srcCompat="@drawable/ic_add"
+        app:tint="@color/white"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
