--- a/app/src/main/res/layout/askitem_recyclerview_row.xml
+++ b/app/src/main/res/layout/askitem_recyclerview_row.xml
@@ -12,90 +12,76 @@
         android:layout_height="130dp"
         android:layout_alignParentTop="true"
         android:layout_margin="3dp"
-        android:backgroundTint="#E0F2F1"
         android:clickable="true"
         android:foreground="?attr/selectableItemBackground"
         app:cardElevation="5dp"
-        app:cardMaxElevation="0dp">
+        app:cardMaxElevation="0dp"
+        app:strokeColor="@color/colorPrimary"
+        app:strokeWidth="2dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="5dp">
+            android:layout_height="match_parent">
 
-            <ImageView
+            <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/askRow_IMG_itemCategoryPic"
                 android:layout_width="130dp"
                 android:layout_height="match_parent"
                 android:scaleType="fitXY"
-                android:src="@mipmap/ic_launcher"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/askRow_LBL_itemName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Microwave"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.056"
-                app:layout_constraintStart_toEndOf="@+id/askRow_IMG_itemCategoryPic"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.136" />
+                app:strokeColor="@color/colorPrimary"
+                app:strokeWidth="4dp" />
 
-            <TextView
-                android:id="@+id/askRow_LBL_itemDescription"
+            <LinearLayout
+                android:id="@+id/askRow_LAY_nameCityDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="A Samsung white microwave"
+                android:layout_marginLeft="10dp"
+                android:orientation="vertical"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.088"
+                app:layout_constraintHorizontal_bias="0.18"
                 app:layout_constraintStart_toEndOf="@+id/askRow_IMG_itemCategoryPic"
-                app:layout_constraintTop_toBottomOf="@+id/askRow_LBL_itemName"
-                app:layout_constraintVertical_bias="0.102" />
+                app:layout_constraintTop_toTopOf="parent">
 
-            <TextView
-                android:id="@+id/askRow_LBL_itemCategory"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Appliances"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.043"
-                app:layout_constraintStart_toEndOf="@+id/askRow_IMG_itemCategoryPic"
-                app:layout_constraintTop_toBottomOf="@+id/askRow_LBL_itemDescription"
-                app:layout_constraintVertical_bias="0.3" />
+                <TextView
+                    android:id="@+id/askRow_LBL_itemName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Microwave"
+                    android:textSize="23sp"
+                    android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/askRow_LBL_itemCity"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tel-Aviv"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.813"
-                app:layout_constraintStart_toEndOf="@+id/askRow_LBL_itemDescription"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.543" />
+                <LinearLayout
+                    android:id="@+id/askRow_LAY_cityDate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="30dp"
+                    android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/askRow_LBL_postDate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="14/10/20"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.338"
-                app:layout_constraintStart_toEndOf="@+id/askRow_LBL_itemCategory"
-                app:layout_constraintTop_toBottomOf="@+id/askRow_LBL_itemDescription"
-                app:layout_constraintVertical_bias="0.3" />
+                    <TextView
+                        android:id="@+id/askRow_LBL_itemCity"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Tel-Aviv"
+                        android:textSize="18sp" />
+
+                    <TextView
+                        android:id="@+id/askRow_LBL_postDate"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="20dp"
+                        android:text="14/10/20"
+                        android:textSize="18sp" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
