--- a/app/src/main/res/layout/giveitem_recyclerview_row.xml
+++ b/app/src/main/res/layout/giveitem_recyclerview_row.xml
@@ -11,8 +11,9 @@
         android:layout_width="match_parent"
         android:layout_height="130dp"
         android:layout_alignParentTop="true"
+        app:strokeColor="@color/colorPrimary"
+        app:strokeWidth="2dp"
         android:layout_margin="3dp"
-        android:backgroundTint="#E0F2F1"
         android:clickable="true"
         android:foreground="?attr/selectableItemBackground"
         app:cardElevation="5dp"
@@ -20,83 +21,81 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="5dp">
+            android:layout_height="match_parent">
 
-            <ImageView
+            <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/giveRow_IMG_itemPicture"
                 android:layout_width="130dp"
                 android:layout_height="match_parent"
+                app:strokeColor="@color/colorPrimary"
+                app:strokeWidth="4dp"
                 android:scaleType="fitXY"
-                android:src="@mipmap/ic_launcher"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/giveRow_LBL_itemName"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:id="@+id/giveRow_LAY_nameCondDate"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Microwave"
-                android:textSize="20sp"
-                android:textStyle="bold"
+                android:layout_marginLeft="10dp"
+                android:orientation="vertical"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.056"
+                app:layout_constraintHorizontal_bias="0.18"
                 app:layout_constraintStart_toEndOf="@+id/giveRow_IMG_itemPicture"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.136" />
+                app:layout_constraintTop_toTopOf="parent">
 
-            <TextView
-                android:id="@+id/giveRow_LBL_itemDescription"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="A Samsung white microwave"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.088"
-                app:layout_constraintStart_toEndOf="@+id/giveRow_IMG_itemPicture"
-                app:layout_constraintTop_toBottomOf="@+id/giveRow_LBL_itemName"
-                app:layout_constraintVertical_bias="0.102" />
+                <TextView
+                    android:id="@+id/giveRow_LBL_itemName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="start"
+                    android:text="Microwave"
+                    android:textSize="23sp"
+                    android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/giveRow_LBL_itemPrice"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Free"
-                android:textSize="15sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.98"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.506" />
+                <LinearLayout
+                    android:id="@+id/giveRow_LAY_contitionDate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="30dp"
+                    android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/giveRow_LBL_itemState"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Used"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.043"
-                app:layout_constraintStart_toEndOf="@+id/giveRow_IMG_itemPicture"
-                app:layout_constraintTop_toBottomOf="@+id/giveRow_LBL_itemDescription"
-                app:layout_constraintVertical_bias="0.3" />
+                    <TextView
+                        android:id="@+id/giveRow_LBL_itemState"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="start"
+                        android:text="Used"
+                        android:textSize="18sp" />
 
-            <TextView
-                android:id="@+id/giveRow_LBL_postDate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="14/10/20"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.066"
-                app:layout_constraintStart_toEndOf="@+id/giveRow_LBL_itemState"
-                app:layout_constraintTop_toBottomOf="@+id/giveRow_LBL_itemDescription"
-                app:layout_constraintVertical_bias="0.3" />
+                    <TextView
+                        android:id="@+id/giveRow_LBL_postDate"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="20dp"
+                        android:layout_weight="1"
+                        android:maxLines="1"
+                        android:text="14/10/20"
+                        android:textSize="18sp" />
+
+                    <TextView
+                        android:id="@+id/giveRow_LBL_itemPrice"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="20dp"
+                        android:text="Free"
+                        android:textSize="18sp" />
+
+                </LinearLayout>
+
+
+            </LinearLayout>
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
