--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -74,7 +74,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_above="@id/profile_LAY_post"
+        android:layout_above="@id/viewPager"
         android:gravity="center"
         android:layout_marginBottom="50dp"
         android:layout_marginStart="40dp">
@@ -95,11 +95,15 @@
 
         android:src="@drawable/ic_line" />
     </LinearLayout>
-        <FrameLayout
-            android:id="@+id/profile_LAY_post"
+
+        <androidx.viewpager.widget.ViewPager
+            android:id="@+id/viewPager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@id/profile_IMG_font" />
+            android:layout_below="@id/profile_IMG_font">
+
+
+        </androidx.viewpager.widget.ViewPager>
 
     </RelativeLayout>
 
