--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
 
     <color name="editBtnColor">#FF6E40</color>
     <color name="removeBtnColor">#FF1744</color>
+    <color name="okGreenBtn">#00E676</color>
 
 
     <color name="colorBackroundLogin">#10002F</color>
